Bug 513135 - Panel edit mode does not close correctly when switching between panels multiple times
Summary: Panel edit mode does not close correctly when switching between panels multip...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Edit Mode (other bugs)
Version First Reported In: 6.5.80
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-09 19:23 UTC by cwo
Modified: 2026-01-13 19:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.6
Sentry Crash Report:


Attachments
screenshot with edit mode active for three panels simultaneously (1.66 MB, image/png)
2025-12-09 19:23 UTC, cwo
Details
screenshot with edit mode active for three panels simultaneously (1.60 MB, image/png)
2025-12-09 19:26 UTC, cwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2025-12-09 19:23:35 UTC
Created attachment 187462 [details]
screenshot with edit mode active for three panels simultaneously

SUMMARY

When in Panel edit mode, clicking a different panel closes the edit mode for that panel, and opens it for the clicked panel. But doing it again (back to the first panel, or to a third one) doesn't work - now both (or more) are open at the same time 

STEPS TO REPRODUCE
1.  Have 2+ panels, right-click one -> Show Panel Configuration
2. Click the other panel (edit mode for first panel is open)
3. Click the first panel again, or any other panel, repeat if you like

OBSERVED RESULT

Edit mode for all clicked Panels from step 2 and 3 is active

EXPECTED RESULT

Edit mode is only active for the last-clicked panel

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5500GT with Radeon Graphics
Memory: 32 GiB of RAM (30.7 GiB usable)
Graphics Processor 1: AMD Radeon RX 580 Series
Graphics Processor 2: AMD Radeon Graphics


ADDITIONAL INFORMATION

Also reproduced on stock Fedora's Plasma 6.5, not just master.
Comment 1 cwo 2025-12-09 19:26:40 UTC
Created attachment 187463 [details]
screenshot with edit mode active for three panels simultaneously
Comment 2 Nate Graham 2025-12-10 16:45:37 UTC
Can reproduce.
Comment 3 Bug Janitor Service 2026-01-07 16:25:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6149
Comment 4 Bug Janitor Service 2026-01-08 14:26:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3440
Comment 5 Marco Martin 2026-01-13 14:43:54 UTC
Git commit c1163acbbb73b2f194b532bd91509abffc3f6225 by Marco Martin.
Committed on 13/01/2026 at 14:43.
Pushed by mart into branch 'master'.

Panel: fix config window focus

Fix config window focus when opening it given we don't want to interact
with the tooltip.

Add a tooltip delay for opening it and don't actually open if the mouse
left the panel window

This way the config window always gets focus when open and if the user
immediately moves the mouse away, there won't be the tooltip flashing

the tooltip will still open if the user keeps the mouse still on the
panel after opening the config window, which is probably what they want,
but it's enough for causing the old popup to close

M  +20   -4    containments/panel/ConfigOverlay.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/c1163acbbb73b2f194b532bd91509abffc3f6225
Comment 6 Marco Martin 2026-01-13 14:47:58 UTC
Git commit fbff416bdc323f61e3dceb7536adb2fae6c046aa by Marco Martin.
Committed on 13/01/2026 at 14:46.
Pushed by mart into branch 'Plasma/6.5'.

Panel: fix config window focus

Fix config window focus when opening it given we don't want to interact
with the tooltip.

Add a tooltip delay for opening it and don't actually open if the mouse
left the panel window

This way the config window always gets focus when open and if the user
immediately moves the mouse away, there won't be the tooltip flashing

the tooltip will still open if the user keeps the mouse still on the
panel after opening the config window, which is probably what they want,
but it's enough for causing the old popup to close

M  +20   -4    containments/panel/ConfigOverlay.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/fbff416bdc323f61e3dceb7536adb2fae6c046aa