PanelView: ensure only one configuration view is open at a time

Only one configuration view is supposed to be visible at a time,
but previously it relied on focus, so if a view did not have focus
it could not close when the next one opened.

Manually keep track of which is the panel with currently open
configuration view, so one panel can hide the config view of another.

BUG:513135